<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity"
    style="@style/ScrollViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/signup_prompt"
            style="@style/FloatingTextTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="@string/email_prompt"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <AutoCompleteTextView
                android:id="@+id/email"
                android:hint="@string/prompt_email"
                style="@style/EmailTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="@string/password_prompt"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <TextView
                android:id="@+id/passwordOne"
                android:hint="@string/prompt_password"
                style="@style/PasswordTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="@string/prompt_password"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <TextView
                android:id="@+id/passwordTwo"
                android:hint="@string/prompt_password_reenter"
                style="@style/PasswordTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="@string/education_level_prompt"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <Spinner
                android:id="@+id/eduSpinner"
                android:layout_width="match_parent"
                style="@style/SpinnerStyle"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="@string/major_prompt"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <EditText
                style="@style/EditTextForm"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="@string/weekly_hrs_prompt"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <EditText
                style="@style/EditTextForm"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/notification_prompt"
                android:layout_width="@dimen/formTextMaxWidth"
                style="@style/FormTextTheme" />
            <RadioButton android:id="@+id/yesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:onClick="onClickRadioButton"/>
            <RadioButton android:id="@+id/noRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:onClick="onClickRadioButton"/>
        </LinearLayout>

        <Button
            style="@style/ButtonTheme"
            android:layout_gravity="center"
            android:onClick="onClickSignUp"
            android:text="@string/sign_up" />

    </LinearLayout>


</ScrollView>