<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHomeworkFragment"
    android:orientation="vertical"
    android:padding="@dimen/layoutPadding">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/name_prompt"
            style="@style/FormTextTheme"/>
        <EditText
            style="@style/EditTextForm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/course_prompt"
            style="@style/FormTextTheme"/>
        <Spinner
            android:id="@+id/courseSpinner"
            style="@style/SpinnerStyle"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/frequency_prompt"
            style="@style/FormTextTheme"/>
        <Spinner
            android:id="@+id/freqSpinner"
            style="@style/SpinnerStyle"></Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/finalAddButton"
        style="@style/ButtonTheme"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_homework" />

</LinearLayout>