<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardBottomMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/cardInnerPadding">
        <TextView
            android:id="@+id/courseName"
            android:text="@string/def_course_name"
            style="@style/FloatingTextTheme" />
        <TextView
            android:id="@+id/taHours"
            android:text="@string/def_ta_hours"
            style="@style/FloatingTextTheme" />
        <TextView
            android:id="@+id/officeHours"
            android:text="@string/def_office_hrs"
            style="@style/FloatingTextTheme" />
    </LinearLayout>


</android.support.v7.widget.CardView>
