<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsFragment"
    style="@style/ScrollViewStyle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="Please enter the following information"
            style="@style/FloatingTextTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="Email"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <AutoCompleteTextView
                android:id="@+id/email"
                android:hint="@string/prompt_email"
                style="@style/EmailTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="Password"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <TextView
                android:id="@+id/passwordOne"
                android:hint="@string/prompt_password"
                style="@style/PasswordTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="Current Level of Education"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <Spinner
                android:id="@+id/eduSpinner"
                android:layout_width="match_parent"
                style="@style/SpinnerStyle"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="Major/Subject of Education"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <EditText
                style="@style/EditTextForm"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/FormTextTheme"
                android:text="No. of hours dedicated to homework per week"
                android:layout_width="@dimen/formTextMaxWidth"/>
            <EditText
                style="@style/EditTextForm"
                android:inputType="number"/>
        </LinearLayout>

        <Button
            style="@style/ButtonTheme"
            android:text="@string/update_setting"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>